--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <meta name="author" content="Andre Deveau" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>GitHub page as PWA template</title>
-    <link
-      rel="canonical"
-      href="https://andre-deveau.github.io/ICS2O-PWA-Template/"
-    />
-    <link rel="manifest" href="/ICS2O-PWA-Template/manifest.webmanifest" />
+    <link rel="canonical" href="https://andre-deveau.github.io/v/" />
+    <link rel="manifest" href="/ICS20-Unit3-04-JS/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
@@ -45,35 +42,50 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first PWA</title>
+  <title>Conversion of Fahrenheit to Celsius</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">My first PWA</span>
+          <span class="mdl-layout-title"
+            >Conversion of Fahrenheit to Celsius</span
+          >
         </div>
       </header>
       <main class="mdl-layout__content">
         <p></p>
         <img
-          src="./images/notebook-animation.svg"
+          src="./images/thermometer.webp"
           alt="Computer"
           width="25%"
           height="25%"
         />
-        <p></p>
+        <form action="#">
+          Temperature:
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="fahrenheit"
+              aria-label="fahrenheit"
+            />
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          F°
+        </form>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="myButtonClicked()"
+          onclick="enterClicked()"
         >
-          Say "Hello, World!"
+          Convert Fahrenheit to Celsius
         </button>
         <!-- basic text -->
         <p></p>
-        <div id="hello-world"></div>
+        <div id="fahrenheit-converted-to-celsius"></div>
       </main>
     </div>
   </body>
